# voicer

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/fmod/example/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
voicerchange/: CMakeLists.txt  build.gradle
voicerchange/src/main/: AndroidManifest.xml
voicerchange/src/main/cpp/: com_derek_voicerchange_EffectUtil.h  effect.cpp
voicerchange/src/main/java/com/derek/voicerchange/: EffectUtil.java  MainActivity.java
voicerchange/src/main/res/layout/: activity_main.xml
voicerchange/src/main/res/values/: strings.xml
